[gd_scene load_steps=5 format=3]

[ext_resource type="Theme" uid="uid://vxs3lu15fk42" path="res://ui/theme.tres" id="1_2fgft"]
[ext_resource type="StyleBox" uid="uid://dtsv4pok5r5ld" path="res://ui/button_hover.tres" id="2_qffuf"]
[ext_resource type="Script" path="res://game/item/slot/inventory_slot.gd" id="3_e43th"]
[ext_resource type="PackedScene" uid="uid://duhdyj0tm3i8" path="res://game/item/slot/item_stack_display.tscn" id="4_t0xbo"]

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(22, 22)
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("1_2fgft")
theme_override_styles/pressed = ExtResource("2_qffuf")
script = ExtResource("3_e43th")

[node name="ItemStackDisplay" parent="." instance=ExtResource("4_t0xbo")]
layout_mode = 1
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="left_pressed" from="." to="." method="_primary_pressed"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="right_pressed" from="." to="." method="_secondary_pressed"]
